--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "canvas-sketch-util": "latest",
+    "file-saver": "latest",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
-    "file-saver": "latest",
-    "canvas-sketch-util": "latest",
-    "pts": "latest"
+    "svelte": "^3.0.0"
   },
   "dependencies": {
+    "gl-vec2": "^1.3.0",
+    "gl-vec3": "^1.1.3",
+    "point-line-distance": "^1.0.0",
     "sirv-cli": "^0.4.4"
   }
 }
