--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "file-saver": "latest",
     "rollup": "^2.40.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.1.1",
+    "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.34.0"
   },
@@ -21,6 +21,7 @@
     "gl-vec2": "^1.3.0",
     "gl-vec3": "^1.1.3",
     "point-line-distance": "^1.0.0",
+    "rollup-plugin-css-only": "^3.1.0",
     "sirv-cli": "^1.0.11"
   }
 }
